--- a/sns-sample/docker-compose.yaml
+++ b/sns-sample/docker-compose.yaml
@@ -9,7 +9,15 @@ services:
       AWS_ACCESS_KEY_ID: "localstack"
       AWS_SECRET_ACCESS_KEY: "localstack"
       AWS_DEFAULT_REGION: "ap-northeast-1"
-  subscriber:
+  subscriber-1:
+    build:
+      context: ./subscriber
+      dockerfile: Dockerfile
+    environment:
+      AWS_ACCESS_KEY_ID: "localstack"
+      AWS_SECRET_ACCESS_KEY: "localstack"
+      AWS_DEFAULT_REGION: "ap-northeast-1"
+  subscriber-2:
     build:
       context: ./subscriber
       dockerfile: Dockerfile
